DTGB-847: Fixed overriden spacing on file element.
Less css overrides, correct markup to match styleguide.

--- a/source/sass/21-atoms/file/_file.scss
+++ b/source/sass/21-atoms/file/_file.scss
@@ -1,15 +1,7 @@
+// Overrides core file.css to match styleguide.
 .file {
-  min-width: 17rem;
-  margin: 0 -.3rem;
   padding-left: 0;
-
-  &::after {
-    display: none;
-  }
-
-  .file__button {
-    margin: .3rem .6rem 0 .3rem;
-  }
+  min-height: auto;
 }
 
 .form-managed-file {
